Added eunit/cover options.

--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,6 @@
        {triq, ".*", {git, "git://github.com/krestenkrab/triq.git", {branch, "master"}}},
        {jsx, ".*", {git, "git://github.com/talentdeficit/jsx", {branch, "master"}}}
 ]}.
+
+{eunit_opts, [verbose]}.
+{cover_enabled, true}.
