Using proper instead of triq now.
triq uses a parameterized module somewhere, which broke on r16b.  According
to https://github.com/manopapad/proper/issues/29#issuecomment-4956226,
even through this project is apache2 and proper is gpl3, as long as this
remains open source there will be no issue.

Also pinned the version of jsx.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
-       {triq, ".*", {git, "git://github.com/krestenkrab/triq.git", {branch, "master"}}},
-       {jsx, ".*", {git, "git://github.com/talentdeficit/jsx", {branch, "master"}}}
+       {proper, "1.0", {git, "git://github.com/manopapad/proper.git", {tag, "v1.0"}}},
+       {jsx, "1.4", {git, "git://github.com/talentdeficit/jsx", {tag, "v1.4"}}}
 ]}.
 
 {eunit_opts, [verbose]}.
