--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps, [
-       {proper, "1.0", {git, "git://github.com/manopapad/proper.git", {tag, "v1.0"}}},
-       {jsx, "1.4", {git, "git://github.com/talentdeficit/jsx", {tag, "v1.4"}}}
+       {proper, "1.0", {git, "https://github.com/manopapad/propert", {tag, "v1.0"}}},
+       {jsx, "1.4", {git, "https://github.com/talentdeficit/jsx", {tag, "v1.4"}}}
 ]}.
 
 {eunit_opts, [verbose]}.
