Fixing a typo in a dependancy.

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-       {proper, "1.0", {git, "https://github.com/manopapad/propert", {tag, "v1.0"}}},
+       {proper, "1.0", {git, "https://github.com/manopapad/proper", {tag, "v1.0"}}},
        {jsx, "1.4", {git, "https://github.com/talentdeficit/jsx", {tag, "v1.4"}}}
 ]}.
 
