All tests pass after big refactor.

--- a/rebar.config
+++ b/rebar.config
@@ -3,5 +3,7 @@
        {jsx, "1.4", {git, "https://github.com/talentdeficit/jsx", {tag, "v1.4"}}}
 ]}.
 
+{erl_first_files, ["rec2json"]}.
+{eunit_first_files, ["rec2json"]}.
 {eunit_opts, [verbose]}.
 {cover_enabled, true}.
