--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{erl_opts, [debug_info]}.
 {deps, [
        {proper, "1.0", {git, "https://github.com/manopapad/proper", {tag, "v1.0"}}},
        {jsx, "1.4", {git, "https://github.com/talentdeficit/jsx", {tag, "v1.4"}}}
