--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
-       {proper, "1.1", {git, "https://github.com/manopapad/proper", {tag, "v1.1"}}},
+       {proper, "1.1", {git, "https://github.com/manopapad/proper", {branch, "master"}}},
        {jsx, "2.4.0", {git, "https://github.com/talentdeficit/jsx", {tag, "v2.4.0"}}}
 ]}.
 
